[package]
name = "pcell"
version = "0.7.1"
authors = ["LogoiLab <cbaxter@mail.umw.edu>"]
description = "A simple malware sample cold storage tool."
publish = true
repository = "https://www.github.com/LogoiLab/PaddedCell"
license = "BSD-3-Clause"
[dependencies]
base64 = "0.7.0"
#byte_sha = "*"
clap = "2.26.2"
md5 = "0.3.5"
prettytable-rs = "0.6.7"
serde = "1.0.16"
serde_derive = "1.0.16"
snap = "0.2.3"
toml = "0.4.5"
